[package]
name = "rte"
description = "Parser for relative time expression"
documentation = "https://github.com/Frezc/relative-time-expression-rust"
homepage = "https://github.com/Frezc/relative-time-expression-rust"
repository = "https://github.com/Frezc/relative-time-expression-rust"
readme = "readme.md"
keywords = ["relative-time", "expression", "time"]
version = "0.1.3"
authors = ["frezc <frezcw@gmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]
categories = ["parser-implementations", "encoding"]
license = "MIT"

[badges]

travis-ci = { repository = "https://github.com/Frezc/relative-time-expression-rust" }
codecov = { repository = "https://github.com/Frezc/relative-time-expression-rust", service = "github" }